--- a/modulo-c/ex001.html
+++ b/modulo-c/ex001.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: rgba(19, 19, 204, 0.479);
+            color: aliceblue;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Iniciando estudos DOM</h1>
+    <P>Aqui vai o resultado</P>
+    <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript</p>
+    <div id="msg">Clique em mim</div>
+
+
+
+
+    <script>
+        // var p1 = window.document.getElementsByTagName('p')[1]
+        // window.document.write('Esta escrito assim: ' + p1.innerText)
+         // window.alert(p1.innerText)
+        var d = window.document.getElementById('msg')
+        d.style.background = 'black'
+        // d.innerText ='estou aguardando'
+        var da = window.document.querySelector('#msg')
+        d.style.color = 'red'   
+    </script>
 </body>
 </html>
