--- a/modulo-e/ex2/index.html
+++ b/modulo-e/ex2/index.html
@@ -11,10 +11,16 @@
         <h1>Vamos contar</h1>
     </header>
     <section>
-        <div id="dados">
-            
+        <div>
+            <div>
+                <label for="txtn">Número</label>
+                <input type="number" name="num" id="txtn">
+                <input type="button" value="Gerar tabuada" onclick="tabuada()">
+            </div>
         </div>
-        <div id="res">
+            <select name="tabuada" id="seltab" size="10">
+                <option value="">Gerando tabuada...</option>
+            </select>
             
         </div>
     </section>
